--- a/samples/socket/dashboard/public/css/mt.css
+++ b/samples/socket/dashboard/public/css/mt.css
@@ -41,3 +41,12 @@ header {
     -webkit-box-shadow:0px 0px 5px rgb(0, 0, 0);
   }
 
+#allMessages {
+  border:solid 1px #333;
+  height:500px; 
+  padding:10px;
+  position:absolute;
+  right:20px;
+  top:20px;
+  width:300px;
+}
