--- a/samples/socket/dashboard/public/css/mt.css
+++ b/samples/socket/dashboard/public/css/mt.css
@@ -44,6 +44,7 @@ header {
 #allMessages {
   border:solid 1px #333;
   height:500px; 
+  overflow:auto;
   padding:10px;
   position:absolute;
   right:20px;
