--- a/samples/socket/dashboard/public/css/mt.css
+++ b/samples/socket/dashboard/public/css/mt.css
@@ -50,4 +50,18 @@ header {
   right:20px;
   top:20px;
   width:300px;
+    
+  -moz-border-radius:10px;
+  -webkit-border-radius:10px;
 }
+  #allMessages section {
+    border:solid 1px #000;
+    margin-top:10px;
+    padding:5px;
+
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+  }
+    #allMessages section:first-child {
+      margin-top:0;
+    }
