--- a/samples/socket/dashboard/public/css/mt.css
+++ b/samples/socket/dashboard/public/css/mt.css
@@ -42,26 +42,27 @@ header {
   }
 
 #allMessages {
-  border:solid 1px #333;
-  height:500px; 
-  overflow:auto;
+  background-color:#000;
+  opacity:0.5;
   padding:10px;
   position:absolute;
   right:20px;
   top:20px;
-  width:300px;
-    
-  -moz-border-radius:10px;
-  -webkit-border-radius:10px;
 }
-  #allMessages section {
-    border:solid 1px #000;
-    margin-top:10px;
-    padding:5px;
-
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
+  #allMessages > section {
+    overflow:auto;
+    padding:10px;
+    width:300px;
   }
-    #allMessages section:first-child {
-      margin-top:0;
+    #allMessages > section section {
+      color:#ccc;
+      border:solid 1px #ccc;
+      margin-top:10px;
+      padding:5px;
+
+      -moz-border-radius:5px;
+      -webkit-border-radius:5px;
     }
+      #allMessages > section section:first-child {
+        margin-top:0;
+      }
